...

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonNext"
        android:layout_marginTop="?actionBarSize">

...

                <Spinner
                    android:id="@+id/title_spinner"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
...

                <EditText
                    android:id="@+id/fullName"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
...
                    android:maxLength="30"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/phone"
                    android:paddingStart="15dp"
                    android:textSize="16sp"
...

                <TextView
                    android:id="@+id/dateOfBirth"
                    style="@android:style/Widget.DeviceDefault.Spinner"
                    android:layout_width="match_parent"
...

            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
...

            <Spinner
                android:id="@+id/yearOfPassing"
                android:layout_width="match_parent"
                android:layout_height="50dp"
...
                        android:inputType="phone|textNoSuggestions"
                        android:maxLength="10"
                        android:nextFocusDown="@+id/email"
                        android:paddingStart="12dp"
                        android:textSize="16sp" />
...

                    <RadioButton
                        android:id="@+id/radio_unmarried"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

            <Switch
                android:id="@+id/scNationality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/motherName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                    android:maxLength="30"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/street"
                    android:paddingStart="12dp"
                    android:textSize="16sp" />
...

                <EditText
                    android:id="@+id/fatherName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/aadharCardNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/postal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <CheckBox
                    android:id="@+id/check_declaration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
